[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgghrl"
dynamic = ["version"]
description = "Subgoal Graph-Guided Hierarchical Reinforcement Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "torch>=2.0",
    "stable-baselines3>=2.1",
    "matplotlib>=3.5",
    "pygame>=2.1",
    "imageio[ffmpeg]>=2.30"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.dynamic]
version = {attr = "sgghrl._version.__version__"}

[tool.setuptools.packages.find]
include = ["sgghrl*"]
exclude = ["experiments*", "tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true